Linking and unlinking between Facebook and Local accounts now possible

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,31 +24,46 @@
 			<div class="well">
 				<h3><span class="fa fa-user"></span> Local</h3>
 
+				<% if (user.local.email) { %>
 					<p>
 						<strong>id</strong>: <%= user._id %><br>
 						<strong>email</strong>: <%= user.local.email %><br>
 						<strong>password</strong>: <%= user.local.password %>
 					</p>
+					
+					<a href="/unlink/local" class="btn btn-default">Unlink</a>
+				<% } else { %>
+					<a href="/connect/local" class="btn btn-default">Connect Local</a>
+				<% } %>
 
 			</div>
 		</div>
+
 
 		<!-- FACEBOOK INFORMATION -->
 		<div class="col-sm-6">
 			<div class="well">
 				<h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
 
+				<!-- check if the user has this token (is the user authenticated with this social account) -->
+				<% if (user.facebook.token) { %>
 					<p>
 						<strong>id</strong>: <%= user.facebook.id %><br>
 						<strong>token</strong>: <%= user.facebook.token %><br>
 						<strong>email</strong>: <%= user.facebook.email %><br>
-						<strong>name</strong>: <%= user.facebook.name %>
+						<strong>name</strong>: <%= user.facebook.name %><br>
 					</p>
+
+					<a href="/unlink/facebook" class="btn btn-primary">Unlink</a>
+				<% } else { %>
+					<a href="/connect/facebook" class="btn btn-primary">Connect Facebook</a>
+				<% } %>
 
 			</div>
 		</div>
-
 	</div>
+
+	<div class="row">
 
 </div>
 </body>
