--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Profile Authentication</title>
+	<title>TagTag - Authentication</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 	<style>
@@ -11,7 +11,10 @@
 </head>
 <body>
 <div class="container">
-	
+<h1><span class="fa fa-tags"></span> Welcome to TagTag</h1>
+
+
+<div class="container">
 	<div class="jumbotron text-center">
 		<h1><span class="fa fa-lock"></span> Profile Authentication</h1>
 
